# flight-price-prediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  prefect.yaml  pyproject.toml
.github/workflows/: cd-deploy.yml  cd-mlflow.yml  cd-monitoring.yml  ci-tests.yml
app/: config.py  main.py
app/routers/: api_models.py  internal.py  predict.py
app/src/: app.py  predictor.py
data/: final_features.csv  final_features.parquet  final_features_20240719_103032.parquet  train_data.parquet  train_data_20240719_103032.parquet  validation_data.parquet  validation_data_20240719_103032.parquet
infrastructure/: main.tf  output.tf  variables.tf
infrastructure/mlflow/: README.md  locals.tf  main.tf  output.tf  variables.tf
infrastructure/mlflow/modules/ecr/: main.tf  output.tf  variables.tf
infrastructure/mlflow/modules/ecs/: main.tf  variables.tf
infrastructure/mlflow/modules/iam/: main.tf  output.tf
infrastructure/mlflow/modules/network/: main.tf  output.tf  variables.tf
infrastructure/mlflow/modules/network/gateway/: main.tf  output.tf  variables.tf
infrastructure/mlflow/modules/network/load-balancer/: main.tf  output.tf  variables.tf
infrastructure/mlflow/modules/network/routes/: main.tf  variables.tf
infrastructure/mlflow/modules/network/security-groups/: main.tf  output.tf  variables.tf
infrastructure/mlflow/modules/network/vpc/: main.tf  output.tf  variables.tf
infrastructure/mlflow/modules/rds/: main.tf  output.tf  variables.tf
infrastructure/mlflow/modules/s3/: main.tf  variables.tf
infrastructure/mlflow/src/: Dockerfile  README.md  entrypoint.sh  mlflow_auth.py  pyproject.toml
infrastructure/mlflow/vars/: prod.tfvars  stg.tfvars
infrastructure/modules/ec2/: iam.tf  key_pair.tf  security_group.tf  variables.tf
infrastructure/modules/ecr/: main.tf  output.tf  variables.tf
infrastructure/modules/sagemaker/: iam.tf  main.tf  output.tf  variables.tf
infrastructure/monitoring/: README.md  locals.tf  main.tf  output.tf  variables.tf
infrastructure/monitoring/modules/ecr/: main.tf  output.tf  variables.tf
infrastructure/monitoring/modules/lambda/: iam.tf  main.tf  variables.tf
infrastructure/monitoring/src/: Dockerfile  README.md  create_new_data.py  create_report.py  lambda_function.py  monitoring_svc.py  pyproject.toml
infrastructure/monitoring/vars/: prod.tfvars  stg.tfvars
infrastructure/sagemaker/: README.md  main.tf  output.tf  variables.tf
infrastructure/sagemaker/app/: Dockerfile  nginx.conf  pyproject.toml
infrastructure/sagemaker/app/src/: .env.template  config.py  serve  wsgi.py
infrastructure/sagemaker/app/src/routers/: internal.py  predict.py
infrastructure/sagemaker/modules/alarms/: main.tf  variables.tf
infrastructure/sagemaker/modules/ecr/: main.tf  output.tf
infrastructure/sagemaker/modules/iam/: output.tf
infrastructure/sagemaker/modules/model/: main.tf  output.tf  variables.tf
infrastructure/sagemaker/vars/: prod.tfvars  stg.tfvars
infrastructure/vars/: production.tfvars  staging.tfvars
integration-tests/: data.json  run.sh  test_docker.py  test_endpoint.py
monitoring/: create_new_data.py  monitor.py
preprocessing/: feature_engineering.py  preprocess_data.py
scripts/: empty_ecr.sh  list_tags.sh  predict.sh  publish.sh
src/: Dockerfile  app.py  predictor.py
src/routers/: predict.py
terraform/infrastructure/: main.tf  output.tf  variables.tf
terraform/infrastructure/modules/: terraform.tfstate
terraform/infrastructure/modules/ec2/: iam.tf  key_pair.tf  main.tf  output.tf  variables.tf
terraform/infrastructure/modules/ecr/: main.tf  output.tf  variables.tf
terraform/infrastructure/modules/s3/: main.tf  variables.tf
terraform/infrastructure/vars/: production.tfvars  staging.tfvars
terraform/sagemaker/: main.tf  output.tf  variables.tf
terraform/sagemaker/vars/: production.tfvars  staging.tfvars
tests/: test_preproc.py
training/: feature_engineering.py  optimization.py  register_model.py  train_model.py  utils.py
