[tool.poetry]
name = "flight-price-prediction"
version = "0.0.1"
description = "Final Project for DataTalksClub MLOps Zoomcamp 2024 Cohort"
authors = ["Magnus Pierrau <magnus.pierrau@algodx.com>"]
maintainers = ["Magnus Pierrau <magnus.pierrau@algodx.com>"]
readme = "README.md"
repository = "https://github.com/mpierrau/flight-price-prediction"
package-mode = false

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
boto3 = "*"
pandas = "^2.2.2"
tqdm = "^4.66.4"
scipy = "^1.14.0"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.1"
mlflow = "^2.14.3"
xgboost = "^2.1.0"
hyperopt = "^0.2.7"
optuna = "^3.6.1"
prefect = "^2.19.8"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
deepdiff = "*"
pylint = "*"
black = "*"
isort = "*"
pre-commit = "*"

[tool.pylint.messages_control]

disable = [
]

[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
length_sort = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
