[tool.poetry]
name = "flight-price-prediction"
version = "0.0.1"
description = "Final Project for DataTalksClub MLOps Zoomcamp 2024 Cohort"
authors = ["Magnus Pierrau <magnus.pierrau@algodx.com>"]
maintainers = ["Magnus Pierrau <magnus.pierrau@algodx.com>"]
readme = "README.md"
repository = "https://github.com/mpierrau/flight-price-prediction"
package-mode = false

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
boto3 = "*"
pandas = "^2.2.2"
mlflow = "^2.14.3"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
xgboost = "^2.1.0"

[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.4"
scikit-learn = "^1.5.1"
hyperopt = "^0.2.7"
prefect = "^2.19.8"
tabulate = "^0.9.0"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
#pyspark = "^3.5.1"
pytest = "*"
deepdiff = "*"
pylint = "*"
black = "*"
isort = "*"
pre-commit = "*"

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "too-many-arguments",
    "no-value-for-parameter",
    "too-many-locals",
    "import-error"
]

[tool.black]
line-length = 100
target-version = ['py311']
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
length_sort = true
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
