[tool.poetry]
name = "flight-price-prediction"
version = "0.0.1"
description = "Final Project for DataTalksClub MLOps Zoomcamp 2024 Cohort"
authors = ["Magnus Pierrau <magnus.pierrau@gmail.com>"]
maintainers = ["Magnus Pierrau <magnus.pierrau@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mpierrau/flight-price-prediction"
package-mode = false

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
boto3 = "1.34.146"
pandas = "2.2.2"
mlflow = "2.14.3"
fastapi = "0.111.1"
pydantic = "2.8.2"
pydantic-settings = "2.3.4"
xgboost = "2.1.0"
evidently = "0.4.32"

[tool.poetry.group.dev.dependencies]
tqdm = "4.66.4"
scikit-learn = "1.5.1"
hyperopt = "0.2.7"
prefect = "2.19.8"
tabulate = "0.9.0"
jupyter = "1.0.0"
sagemaker = "2.75.1"
protobuf = "3.20" # Bugfix for sagemaker
pytest = "8.2.2"
kaggle = "1.6.17"
deepdiff = "7.0.1"
pylint = "3.2.5"
black = "24.4.2"
isort = "5.13.2"
pre-commit = "3.7.1"

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "too-many-arguments",
    "no-value-for-parameter",
    "too-many-locals",
    "too-few-public-methods",
    "import-error",
    "ungrouped-imports",
    "unused-argument"
]

[tool.black]
line-length = 100
target-version = ['py311']
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
length_sort = true
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
