[tool.poetry]
name = "mlflow-server"
version = "0.0.1"
description = "MLFlow server app"
authors = ["Magnus Pierrau <magnus.pierrau@gmail.com>"]
maintainers = ["Magnus Pierrau <magnus.pierrau@gmail.com>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
mlflow = "2.15.1"
click = "8.1.7"
pg8000 = "1.31.2"
wsgi-basic-auth = "1.1.0"
gunicorn = "22.0.0"
psycopg2-binary = "2.9.9"
boto3 = "1.34.156"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
