[tool.poetry]
name = "prediction-app-flight-price-prediction"
version = "0.0.1"
description = "Dependencies for model prediction app"
authors = ["Magnus Pierrau <magnus.pierrau@gmail.com>"]
maintainers = ["Magnus Pierrau <magnus.pierrau@gmail.com>"]
package-mode = false

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
boto3 = "1.34.146"
pandas = "2.2.2"
mlflow = "2.14.3"
fastapi = "0.111.1"
pydantic = "2.8.2"
pydantic-settings = "2.3.4"
xgboost = "2.1.0"
scikit-learn = "1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
